# tinylang

./: CMakeLists.txt  README.md  conanfile.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
configured_files/: config.hpp.in
docs/: Lexer.md
src/: CMakeLists.txt  main.cpp
src/lexer/: Lexer.cpp  Lexer.h  Tokens.h
test/: CMakeLists.txt  LexerTests.cpp
